--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "socket-chat-example",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "my first socket.io app",
   "dependencies": {
-    "express": "4.10.2",
-    "socket.io": "1.2.0"
+    "express": "*",
+    "socket.io": "*"
+  },
+  "repository" :
+  { "type" : "git",
+    "url" : "https://github.com/hasitha92/nodejs_chat.git"
   }
 }
